crates/formatter/tests/snapshots/snapshots__migrations__000138_join_users.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop view template_with_users;
drop view visible_users;
