crates/formatter/tests/snapshots/snapshots__migrations__000138_join_users.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create view visible_users as select id, username, avatar_url from users;

comment on view visible_users is 'Visible fields of users are allowed to be joined with other tables for including context of other resources.';

-- If you need to update this view, put 'DROP VIEW template_with_users;' before this.
create view template_with_users as
select
	templates.*,
	coalesce(visible_users.avatar_url, '') as created_by_avatar_url,
	coalesce(visible_users.username, '') as created_by_username
from templates
	left join visible_users on templates.created_by = visible_users.id;

comment on view template_with_users is 'Joins in the username + avatar url of the created by user.';
