crates/formatter/tests/snapshots/snapshots__migrations__000139_template_restart_requirement.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Delete the new version of the template_with_users view to remove the column
-- dependency.
drop view template_with_users;

alter table templates
	drop column restart_requirement_days_of_week,
	drop column restart_requirement_weeks;

alter table users drop column quiet_hours_schedule;

-- Restore the old version of the template_with_users view.
create view template_with_users as
select
	templates.*,
	coalesce(visible_users.avatar_url, '') as created_by_avatar_url,
	coalesce(visible_users.username, '') as created_by_username
from templates
	left join visible_users on templates.created_by = visible_users.id;
comment on view template_with_users is 'Joins in the username + avatar url of the created by user.';
