crates/formatter/tests/snapshots/snapshots__migrations__000139_template_restart_requirement.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table templates
	-- The max_ttl column will be dropped eventually when the new "restart
	-- requirement" feature flag is fully rolled out.
	-- DROP COLUMN max_ttl,
	add column restart_requirement_days_of_week smallint not null default 0,
	add column restart_requirement_weeks bigint not null default 0;

comment on column templates.restart_requirement_days_of_week is 'A bitmap of days of week to restart the workspace on, starting with Monday as the 0th bit, and Sunday as the 6th bit. The 7th bit is unused.';
comment on column templates.restart_requirement_weeks is 'The number of weeks between restarts. 0 or 1 weeks means "every week", 2 week means "every second week", etc. Weeks are counted from January 2, 2023, which is the first Monday of 2023. This is to ensure workspaces are started consistently for all customers on the same n-week cycles.';

alter table users add column quiet_hours_schedule text not null default '';

comment on column users.quiet_hours_schedule is 'Daily (!) cron schedule (with optional CRON_TZ) signifying the start of the user''s quiet hours. If empty, the default quiet hours on the instance is used instead.';

-- Update the template_with_users view by recreating it.
drop view template_with_users;
create view template_with_users as
select
	templates.*,
	coalesce(visible_users.avatar_url, '') as created_by_avatar_url,
	coalesce(visible_users.username, '') as created_by_username
from
	templates left join visible_users on templates.created_by = visible_users.id;
comment on view template_with_users is 'Joins in the username + avatar url of the created by user.';
