crates/formatter/tests/snapshots/snapshots__migrations__000140_workspace_deleting_at.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspaces add column deleting_at timestamptz null;
