crates/formatter/tests/snapshots/snapshots__migrations__000141_join_users_build_version.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop view workspace_build_with_user;
drop view template_version_with_user;
