crates/formatter/tests/snapshots/snapshots__migrations__000142_proxy_derp.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- drop any rows that aren't primary replicas
delete from replicas where "primary" = false;

alter table replicas drop column "primary";

alter table workspace_proxies drop constraint workspace_proxies_region_id_unique,
drop column region_id,
drop column derp_enabled;
