crates/formatter/tests/snapshots/snapshots__migrations__000142_proxy_derp.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table replicas add column "primary" boolean not null default true;

alter table workspace_proxies
-- Adding a serial to a table without a default value will be filled as you
-- would expect on versions of Postgres >= 9 AFAIK (which we require).
add column region_id serial not null,
add column derp_enabled boolean not null default true,
add constraint workspace_proxies_region_id_unique unique (region_id);
