crates/formatter/tests/snapshots/snapshots__migrations__000144_user_status_dormant.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- It's not possible to drop enum values from enum types, so the UP has "IF NOT EXISTS"
update users set status = 'active'::user_status where status::text = 'dormant';
